--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 4</title>
+	<title>Wisdom... coming soon!</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -32,7 +32,7 @@
 			</h3>
 
 			<p class="txt-center l1-txt2 p-b-60">
-				Our website is under construction
+				Wisdom is under construction...
 			</p>
 
 			<div class="flex-w flex-c cd100 p-b-82">
