--- a/templates/support.html
+++ b/templates/support.html
@@ -104,16 +104,16 @@
                 <div class="col-12 col-md-8">
                     <div class="contact-form-area">
                         <h2>Get in touch</h2>
-                        <form action="#">
+                        <form action="{{url_for('support')}}" method='post'>
                             <div class="row">
                                 <div class="col-12 col-md-6">
-                                    <input type="text" class="form-control" id="name" placeholder="Name">
+                                    <input type="text" class="form-control" id="name" placeholder="Name" name="name">
                                 </div>
                                 <div class="col-12 col-md-6">
-                                    <input type="email" class="form-control" id="email" placeholder="E-mail">
+                                    <input type="email" class="form-control" id="email" placeholder="E-mail" name="email">
                                 </div>
                                 <div class="col-12">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                    <input type="text" class="form-control" id="subject" placeholder="Subject" name="subject">
                                 </div>
                                 <div class="col-12">
                                     <textarea name="message" class="form-control" id="message" cols="30" rows="10" placeholder="Message"></textarea>
