feat: updating colours and adding screenshots

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,19 +37,19 @@
                     <div class="menu_area h-150">
                         <nav class="navbar h-150 navbar-expand-lg align-items-center">
                             <!-- Logo -->
-                            <a class="navbar-brand" href="{{url_for('home')}}" style="vertical-align: middle;"><img src="../static/img/core-img/transparent_light.png" width="13%" alt="logo"></a>
+                            <a class="navbar-brand" href="index.html" style="vertical-align: middle;"><img src="../static/img/core-img/transparent_light.png" width="13%" alt="logo"></a>
 
                             <!-- Menu Area -->
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
                             <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
                                 <ul class="navbar-nav animated" id="nav">
-                                    <li class="nav-item active"><a class="nav-link" href="{{url_for('home')}}">Home</a></li>
+                                    <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Technology</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="{{url_for('support')}}">Support</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
                                 </ul>
                                 <!-- Search Form Area Start -->
                                 <div class="search-form-area animated">
@@ -84,7 +84,7 @@
                 <div class="hero-slide-content text-center">
                     <h2>Making information, delightful.</h2>
                     <h4>Download now on App Store & Google Play</h4>
-                    <img class="slide-img" src="../static/img/bg-img/device.png" height="10%" alt="">
+                    <img class="slide-img" src="../static/img/bg-img/device.png" alt="">
                 </div>
             </div>
         </div>
@@ -144,6 +144,12 @@
     </section>
     <!-- ***** Service Area End ***** -->
 
+
+    
+
+    
+
+        
 
     <!-- ***** Workflow Area Start ***** -->
     <section class="mosh-workflow-area section_padding_100_0 clearfix">
@@ -216,7 +222,7 @@
                         <div class="section-heading">
                             <p>give us a shout</p>
                             <h2>What do you think of Wisdom?</h2>
-                            <a href="{{url_for('support')}}" class="btn mosh-btn">Contact Us</a>
+                            <a href="support.html" class="btn mosh-btn">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -233,21 +239,20 @@
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3">
                         <div class="single-footer-widget mb-100">
-                            <a href="#" class="mb-50 d-block"><img src="../static/img/core-img/transparent_light.png" width="25%" alt=""></a>
-                            <p>Making information, delightful.</p>
+                            <a href="#" class="mb-50 d-block"><img src="../static/img/core-img/dark_icon.png" width="50%" alt=""></a>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-3">
                         <div class="single-footer-widget mb-100">
                             <h5>Fast links</h5>
                             <ul>
-                                <li><a href="{{url_for('support')}}">Home</a></li>
+                                <li><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Technology</a></li>
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="{{url_for('support')}}">Support</a></li>
-                                <li><a href="{{url_for('privacy_policy')}}">Privacy policy</a></li>
+                                <li><a href="support.html">Support</a></li>
+                                <li><a href="privacy_policy.html">Privacy policy</a></li>
                             </ul>
                         </div>
                     </div>
