--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                 <div class="hero-slide-content text-center">
                     <h2>Making information, delightful.</h2>
                     <h4>Download now on App Store & Google Play</h4>
-                    <img class="slide-img" src="../static/img/bg-img/device.png" alt="">
+                    <img id="imgcontainer" src="../static/img/core-img/g.png" alt="">
                 </div>
             </div>
         </div>
