--- a/templates/index.html
+++ b/templates/index.html
@@ -37,19 +37,19 @@
                     <div class="menu_area h-150">
                         <nav class="navbar h-150 navbar-expand-lg align-items-center">
                             <!-- Logo -->
-                            <a class="navbar-brand" href="index.html" style="vertical-align: middle;"><img src="../static/img/core-img/transparent_light.png" width="13%" alt="logo"></a>
+                            <a class="navbar-brand" href="{{url_for('home')}}" style="vertical-align: middle;"><img src="../static/img/core-img/transparent_light.png" width="13%" alt="logo"></a>
 
                             <!-- Menu Area -->
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mosh-navbar" aria-controls="mosh-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 
                             <div class="collapse navbar-collapse justify-content-end" id="mosh-navbar">
                                 <ul class="navbar-nav animated" id="nav">
-                                    <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                                    <li class="nav-item active"><a class="nav-link" href="{{url_for('home')}}">Home</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Technology</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="support.html">Support</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="{{url_for('support')}}">Support</a></li>
                                 </ul>
                                 <!-- Search Form Area Start -->
                                 <div class="search-form-area animated">
@@ -222,7 +222,7 @@
                         <div class="section-heading">
                             <p>give us a shout</p>
                             <h2>What do you think of Wisdom?</h2>
-                            <a href="support.html" class="btn mosh-btn">Contact Us</a>
+                            <a href="{{url_for('support')}}" class="btn mosh-btn">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -251,8 +251,8 @@
                                 <li><a href="#">Technology</a></li>
                                 <li><a href="#">Blog</a></li>
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="support.html">Support</a></li>
-                                <li><a href="privacy_policy.html">Privacy policy</a></li>
+                                <li><a href="{{url_for('support')}}">Support</a></li>
+                                <li><a href="{{url_for('privacy_policy')}}">Privacy policy</a></li>
                             </ul>
                         </div>
                     </div>
