--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,39 @@
                 <div class="hero-slide-content text-center">
                     <h2>Making information, delightful.</h2>
                     <h4>Download now on App Store & Google Play</h4>
-                    <img id="imgcontainer" src="../static/img/core-img/g.png" alt="">
+                    <div class="container" style="padding: 50px; text-align: center; display: block">
+                        <img id="imgcontainer" src="../static/img/screenshots/1.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- Single Hero Slides -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                <div class="hero-slide-content text-center">
+                    <h2>Making information, delightful.</h2>
+                    <h4>Download now on App Store & Google Play</h4>
+                    <div class="container" style="padding: 50px;">
+                        <img id="imgcontainer" src="../static/img/screenshots/2.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- Single Hero Slides -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                <div class="hero-slide-content text-center">
+                    <h2>Making information, delightful.</h2>
+                    <h4>Download now on App Store & Google Play</h4>
+                    <div class="container" style="padding: 50px;">
+                        <img id="imgcontainer" src="../static/img/screenshots/3.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <!-- Single Hero Slides -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                <div class="hero-slide-content text-center">
+                    <h2>Making information, delightful.</h2>
+                    <h4>Download now on App Store & Google Play</h4>
+                    <div id="imgholder" class="container" style="padding: 50px;">
+                        <img id="imgcontainer" src="../static/img/screenshots/4.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
