--- a/static/css/style.css
+++ b/static/css/style.css
@@ -512,7 +512,10 @@ img {
 }
 
 #imgcontainer {
-    width:400px;
+    border-radius: 30px; 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 350px;
+    margin: auto; 
 }
 /* 
 #imagecontainer{ 
